[package]
name = "tcpdrop"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.bytemuck]
version = "1.14.0"
features = ["extern_crate_std"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.windows]
version = "0.51.1"
features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper"]
